Fix misaligned sidebar icon

--- a/resources/assets/sass/main.scss
+++ b/resources/assets/sass/main.scss
@@ -260,6 +260,7 @@ body {
 
             .icon {
                 margin-left: 4px;
+                vertical-align: initial;
             }
 
             .text {
